javascript now browser-friendly and loading correctly

--- a/web/index.html
+++ b/web/index.html
@@ -5,25 +5,11 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    <div id="blackburn">Blackburn</div>
-    <div id="liverpool">Liverpool</div>
-    <div id="mancity">Man City</div>
-    <div id="manunited">Man United</div>
-    <div id="">Man United</div>
-    <div  id="">Blackburn</div>
-    <div  id="">Liverpool</div>
-    <div  id="">Man City</div>
-    <div  id="">Man United</div>
-    <div id="">Man United</div>
-    <div  id="">Blackburn</div>
-    <div  id="">Liverpool</div>
-    <div  id="">Man City</div>
-    <div  id="">Man United</div>
-    <div id="">Man United</div>
-    <div  id="">Blackburn</div>
-    <div  id="">Liverpool</div>
-    <div  id="">Man City</div>
-    <div  id="">Man United</div>
-    <div id="">Man United</div>
+
+    <script type="text/javascript" src="data.js"></script>
+    <script type="text/javascript" src="../jsonp/games-jsonp.js"></script>
+    <script type="text/javascript" src="../jsonp/teams-jsonp.js"></script>
+    <script type="text/javascript" src="../lib/league.js"></script>
+    <script type="text/javascript" src="app.js"></script>
 </body>
 </html>
