first pass web animation

--- a/web/index.html
+++ b/web/index.html
@@ -5,7 +5,12 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-
+    <div id="header">
+        <div> <span>Team</span><span>P</span><span>W</span><span>D</span><span>L</span><span>F</span><span>A</span><span>GD</span><span>Pts</span>
+        </div>
+    </div>
+    <div id="table">
+    </div>
     <script type="text/javascript" src="data.js"></script>
     <script type="text/javascript" src="../jsonp/games-jsonp.js"></script>
     <script type="text/javascript" src="../jsonp/teams-jsonp.js"></script>
