--- a/web/index.html
+++ b/web/index.html
@@ -5,6 +5,7 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
+    <h3 id="date"></h3>
     <div id="header">
         <div> <span>Team</span><span>P</span><span>W</span><span>D</span><span>L</span><span>F</span><span>A</span><span>GD</span><span>Pts</span>
         </div>
