--- a/web/index.html
+++ b/web/index.html
@@ -5,13 +5,11 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-    <h3 id="date"></h3>
-    <div id="header">
-        <div> <span>Team</span><span>P</span><span>W</span><span>D</span><span>L</span><span>F</span><span>A</span><span>GD</span><span>Pts</span>
-        </div>
+        <h3 id="date"></h3>
+    <div id="header"> <span>#</span><span>Team</span><span>P</span><span>W</span><span>D</span><span>L</span><span>F</span><span>A</span><span>GD</span><span>Pts</span>
     </div>
-    <div id="table">
-    </div>
+    <div id="table"></div>
+    <p>Use the &larr; and &rarr; keys to navigate the season</p>
     <script type="text/javascript" src="data.js"></script>
     <script type="text/javascript" src="../jsonp/games-jsonp.js"></script>
     <script type="text/javascript" src="../jsonp/teams-jsonp.js"></script>
