tidy, web test suite

--- a/web/index.html
+++ b/web/index.html
@@ -10,9 +10,10 @@
     </div>
     <div id="table"></div>
     <p>Use the &larr; and &rarr; keys to navigate the season</p>
+    <p><a href="test-runner/index.html">Test suite</a></p>
     <script type="text/javascript" src="data.js"></script>
-    <script type="text/javascript" src="../jsonp/games-jsonp.js"></script>
-    <script type="text/javascript" src="../jsonp/teams-jsonp.js"></script>
+    <script type="text/javascript" src="../data/games-jsonp.js"></script>
+    <script type="text/javascript" src="../data/teams-jsonp.js"></script>
     <script type="text/javascript" src="../lib/league.js"></script>
     <script type="text/javascript" src="app.js"></script>
 </body>
