added result section

--- a/web/index.html
+++ b/web/index.html
@@ -6,10 +6,22 @@
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
-        <h3 id="date"></h3>
-    <div id="header"> <span>#</span><span>Team</span><span>P</span><span>W</span><span>D</span><span>L</span><span>F</span><span>A</span><span>GD</span><span>Pts</span>
-    </div>
-    <div id="table"></div>
+    <h3 id="date"></h3>
+    <section class="left">
+        <div id="header"> <span>#</span><span>Team</span><span>P</span><span>W</span><span>D</span><span>L</span><span>F</span><span>A</span><span>GD</span><span>Pts</span>
+        </div>
+        <div id="table"></div>
+    </section>
+    <section class="right">
+        <div id="results">
+            <div><span>Man United</span> <span> 0 - 6 </span> <span>Man city</span></div>
+            <div><span>Man United</span> <span> 0 - 6 </span> <span>Man city</span></div>
+            <div><span>Man United</span> <span> 0 - 6 </span> <span>Man city</span></div>
+            <div><span>Man United</span> <span> 0 - 6 </span> <span>Man city</span></div>
+            <div><span>Man United</span> <span> 0 - 6 </span> <span>Man city</span></div>
+            <div><span>Man United</span> <span> 0 - 6 </span> <span>Man city</span></div>
+        </div>
+    </section>
     <p>Use the &larr; and &rarr; keys to navigate the season</p>
     <p><a href="test-runner/index.html">Test suite</a></p>
     <script type="text/javascript" src="data.js"></script>
