add random results.. readme..

--- a/web/index.html
+++ b/web/index.html
@@ -23,7 +23,11 @@
         </div>
     </section>
     <p>Use the &larr; and &rarr; keys to navigate the season</p>
-    <p><a href="test-runner/index.html">Test suite</a></p>
+    <p>
+        <a href="test-runner/index.html">Test suite</a> &bull; 
+        <a id="addResults" href="javascript:;">Add random results</a>
+        <span id="notification"></span>
+    </p>
     <script type="text/javascript" src="data.js"></script>
     <script type="text/javascript" src="../data/games-jsonp.js"></script>
     <script type="text/javascript" src="../data/teams-jsonp.js"></script>
