can now click arrows to navigate

--- a/web/index.html
+++ b/web/index.html
@@ -22,7 +22,7 @@
             <div><span>Man United</span> <span> 0 - 6 </span> <span>Man city</span></div>
         </div>
     </section>
-    <p>Use the &larr; and &rarr; keys to navigate the season</p>
+    <p>Use the <a id="left" href="javascript:;">&larr;</a> and <a id="right" href="javascript:;">&rarr;</a> keys to navigate the season</p>
     <p>
         <a href="test-runner/index.html">Test suite</a> &bull; 
         <a id="addResults" href="javascript:;">Add random results</a>
