--- a/web/index.html
+++ b/web/index.html
@@ -13,14 +13,7 @@
         <div id="table"></div>
     </section>
     <section class="right">
-        <div id="results">
-            <div><span>Man United</span> <span> 0 - 6 </span> <span>Man city</span></div>
-            <div><span>Man United</span> <span> 0 - 6 </span> <span>Man city</span></div>
-            <div><span>Man United</span> <span> 0 - 6 </span> <span>Man city</span></div>
-            <div><span>Man United</span> <span> 0 - 6 </span> <span>Man city</span></div>
-            <div><span>Man United</span> <span> 0 - 6 </span> <span>Man city</span></div>
-            <div><span>Man United</span> <span> 0 - 6 </span> <span>Man city</span></div>
-        </div>
+        <div id="results"></div>
     </section>
     <p>Use the <a id="left" href="javascript:;">&larr;</a> and <a id="right" href="javascript:;">&rarr;</a> keys to navigate the season</p>
     <p>
